Revision history for AWS::CLIWrapper

1.10  2015-10-??
        - Specified min perl version both in module and dist metadata

1.09  2015-10-02
    [IMPROVEMENTS]
        - Support ec2 wait (PR #9 by @negachov)

1.08  2015-08-19
    [IMPROVEMENTS]
        - write stdout/stderr message in debug mode (PR #8 by @limitusus)

1.07  2015-07-21
    [IMPROVEMENTS]
        - Don't execute aws command in load phase

1.06  2014-11-25
    [IMPROVEMENTS]
        - s3 OPERATION can take --include or --exclude option multiple times

1.05  2014-09-29
    [DOCUMENTATION]
        - Added LFMF details! (PR #7)

1.04  2014-08-21
    [IMPROVEMENTS]
        - Add some services (cloudsearch, cloudsearchdomain, cloudtrail, cognito_identity, cognito_sync, configure, datapipeline, emr, kinesis, logs, route53domains) with aws-cli/1.4.2

1.03  2014-02-27
    [BUG FIXES]
        - Escape all arguments before execute by IPC::Cmd
          (Suggested by: @Yuryu #4)
        - Fix bug in passing operation to s3 or s3api for compatibility old aws-cli

1.02  2014-02-25
    [DOCUMENTATION]
        - Update the POD to include a special case for the s3 OPERATION.
          (Thanks: @Yuryu)

1.01  2013-12-04
    [NEW FEATURES]
        - Support 3 or more parameters for s3
          eg: s3 sync from to

1.00  2013-09-06
    [NEW FEATURES]
        - Officially AWS::CLIWrapper supports awscli/1.0.0
    [INCOMPATIBLE CHANGES]
        - There are several incompatible changes in between old and
          new awscli. AWS::CLIWrapper supports scripts written for old
          awscli syntax as much as possible. Don't blame me... :p
        - awscli >= 0.14.0 requires upper-case parameters "Key",
          "Values", "Value", "Name" in such --filter. But < 1.14.0
          requires lower-case parameters "key", "values", "value",
         "name". So AWS::CLIWrapper converts upper/lower-case by
         version of awscli.
        - awscli >= 0.14.0 requires --count pramter in ec2